--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -5,6 +5,7 @@ h1 {
   color: red;
   text-align: center;
 }
-p {  font-family: verdana;
-  font-size 40px;
+p {  
+  font-family: verdana;
+  font-size: 40px;
 }
