--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: blue;
+  background-color: purple;
 }
 
 h1 {
-  color: green;
+  color: blue;
   text-align: center;
   font-size: 4em;
 }
